--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Lojinha da tia</title>
+    <title>Lojinha</title>
   </head>
   <body>
 
@@ -23,7 +23,7 @@
 
         <header id="home">
             <div class="img-wrapper">
-                <img src="imagens/bg.jpg" alt="">
+                <img src="imagens/Banner.jpg" alt="">
             </div>
             <div class="banner">
                 <h1>Lojinha da tia</h1>
@@ -48,7 +48,9 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
           </div>
         </aside>
-     
+
+        
+
         <div class="sessao-projetos" id="projetos">
           <div class="sessao-header">
             <h1>Mentorias</h1>
@@ -56,7 +58,7 @@
           <div class="projetos">
             <div class="card">
               <div class="card-img-wrapper">
-                <img src="imagens/proj1.jpg" alt="Masculino" />
+                <img src="imagens/Masculino.jpg" alt="imagem do projeto ToDo" />
               </div>
               <div class="card-info">
                 <h2>ToDo List</h2>
@@ -67,7 +69,7 @@
             </div>
             <div class="card">
               <div class="card-img-wrapper">
-                <img src="imagens/proj2.jpg" alt="Feminino" />
+                <img src="imagens/Feminino.jpg" alt="imagem do projeto Maratona" />
               </div>
               <div class="card-info">
                 <h2>Maratona</h2>
@@ -78,7 +80,7 @@
             </div>
             <div class="card">
               <div class="card-img-wrapper">
-                <img src="imagens/proj3.jpg" alt="Infantil" />
+                <img src="imagens/Infantil.jpg" alt="imagem do projeto Casa Bela" />
               </div>
               <div class="card-info">
                 <h2>Casa Bela</h2>
@@ -89,7 +91,7 @@
             </div>
             <div class="card">
               <div class="card-img-wrapper">
-                <img src="imagens/proj2.jpg" alt="Para festa" />
+                <img src="imagens/Festas.jpg" alt="imagem do projeto Maratona" />
               </div>
               <div class="card-info">
                 <h2>Maratona</h2>
@@ -108,31 +110,31 @@
           <div class="orcamento-wrapper">
             <h1>Faça um orçamento</h1>
             <form>
-              <label for="qtde">Qtde de Produtos</label>
+              <label for="qtde">Qtde de Páginas</label>
               <input type="number" min="1" name="qtde" id="qtde">
-              <label for="js">Envio via Correiros</label>
+              <label for="js">Preciso de uma Revisão e Correção ABNT</label>
               <input type="checkbox" name="js" id="js">
-              <label>Tipo do Peça</label>
+              <label>Tipo do Projeto</label>
               <div class="group-layout">
                 <div>
                   <input type="radio" name="layout" id="layout-sim">
-                  <label for="layout-sim">Masculino</label>
+                  <label for="layout-sim">Dissertação</label>
                 </div>
                 <div>
                   <input type="radio" name="layout" id="layout-sim">
-                  <label for="layout-sim">Feminino</label>
+                  <label for="layout-sim">Monografia</label>
                 </div>
                 <div>
                   <input type="radio" name="layout" id="layout-nao">
-                  <label for="layout-nao">Infantil</label>
+                  <label for="layout-nao">TCC</label>
                 </div>
                 <div>
                   <input type="radio" name="layout" id="layout-nao">
-                  <label for="layout-nao">Para Festa</label>
+                  <label for="layout-nao">Artigo</label>
                 </div>
               </div>
               <label for="prazo">Prazo</label>
-              <input type="range" name="prazo" id="prazo" min="1" max="5">
+              <input type="range" name="prazo" id="prazo" min="3" max="10">
               <label id="preco">R$ 0,00</label>
               <button class="btn btn-orcamento" type="submit">Enviar</button>
             </form>
@@ -142,7 +144,7 @@
         <footer>
           <div class="footer-content">
             <p>
-              Copyright &copy; 2021,Josenilson Vinicius
+              Copyright &copy; 2021, DIGI TALLS - Todos os diretos reservados
             </p>
             <div class="social-list">
               <ul>
